14. High-Performance Pandas - eval() and query().ipynb - modified

--- a/python/10_pandas/python_for_datascience_handbook/14. High-Performance Pandas - eval() and query().ipynb
+++ b/python/10_pandas/python_for_datascience_handbook/14. High-Performance Pandas - eval() and query().ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101 ms ± 4.72 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "88.5 ms ± 497 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53.1 ms ± 717 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "55.8 ms ± 4.93 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -94,11 +94,620 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Comparison operators\n",
+    "\n",
+    "• pd.eval() supports all comparison operators, including chained expressions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = (df1 < df2) & (df2 <= df3) & (df3 != df4)\n",
+    "result2 = pd.eval('df1 < df2 <= df3 != df4')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bitwise operators\n",
+    "\n",
+    "• pd.eval() supports the & and | bitwise operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = (df1 < 0.5) & (df2 < 0.5) | (df3 < df4)\n",
+    "result2 = pd.eval('(df1 < 0.5) & (df2 < 0.5) | (df3 < df4)')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• In addition, it supports the use of the literal and and or in Boolean expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result3 = pd.eval('(df1 < 0.5) and (df2 < 0.5) or (df3 < df4)')\n",
+    "np.allclose(result1, result3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Object attributes and indices\n",
+    "\n",
+    "• pd.eval() supports access to object attributes via the obj.attr syntax, and indexes via the obj[index] syntax."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = df1.T[0] + df2.iloc[1]\n",
+    "result2 = pd.eval('df1.T[0] + df2.iloc[1]')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame.eval() for Column-Wise Operations\n",
+    "\n",
+    "• Just as Pandas has a top-level pd.eval() function, DataFrames have an eval() method that works in similar ways.\n",
+    "\n",
+    "• The benefit of the eval() method is that columns can be referred to by name.\n",
+    "\n",
+    "• We’ll use this labeled array as an example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.615875</td>\n",
+       "      <td>0.525167</td>\n",
+       "      <td>0.047354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.330858</td>\n",
+       "      <td>0.412879</td>\n",
+       "      <td>0.441564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.689047</td>\n",
+       "      <td>0.559068</td>\n",
+       "      <td>0.230350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.290486</td>\n",
+       "      <td>0.695479</td>\n",
+       "      <td>0.852587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.424280</td>\n",
+       "      <td>0.534344</td>\n",
+       "      <td>0.245216</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C\n",
+       "0  0.615875  0.525167  0.047354\n",
+       "1  0.330858  0.412879  0.441564\n",
+       "2  0.689047  0.559068  0.230350\n",
+       "3  0.290486  0.695479  0.852587\n",
+       "4  0.424280  0.534344  0.245216"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(rng.rand(1000, 3), columns = ['A', 'B', 'C'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• Using pd.eval() as above, we can compute expressions with the three columns like this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = (df['A'] + df['B']) / (df['C'] - 1)\n",
+    "result2 = pd.eval('(df.A + df.B) / (df.C - 1)')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• The DataFrame.eval() method allows much more succinct evaluation of expressions with the columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result3 = df.eval(('(A + B) / (C - 1)'))\n",
+    "np.allclose(result1, result3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assignment in DataFrame.eval()\n",
+    "\n",
+    "• In addition to the options just discussed, DataFrame.eval() also allows assignment to any column.\n",
+    "\n",
+    "• Let’s use the DataFrame from before, which has columns 'A' , 'B' , and 'C'\n",
+    "\n",
+    "• We can use df.eval() to create a new column 'D' and assign to it a value computed from the other columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.615875</td>\n",
+       "      <td>0.525167</td>\n",
+       "      <td>0.047354</td>\n",
+       "      <td>24.095868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.330858</td>\n",
+       "      <td>0.412879</td>\n",
+       "      <td>0.441564</td>\n",
+       "      <td>1.684325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.689047</td>\n",
+       "      <td>0.559068</td>\n",
+       "      <td>0.230350</td>\n",
+       "      <td>5.418335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.290486</td>\n",
+       "      <td>0.695479</td>\n",
+       "      <td>0.852587</td>\n",
+       "      <td>1.156439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.424280</td>\n",
+       "      <td>0.534344</td>\n",
+       "      <td>0.245216</td>\n",
+       "      <td>3.909296</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C          D\n",
+       "0  0.615875  0.525167  0.047354  24.095868\n",
+       "1  0.330858  0.412879  0.441564   1.684325\n",
+       "2  0.689047  0.559068  0.230350   5.418335\n",
+       "3  0.290486  0.695479  0.852587   1.156439\n",
+       "4  0.424280  0.534344  0.245216   3.909296"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.eval('D = (A + B) / C', inplace = True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• In the same way, any existing column can be modified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.615875</td>\n",
+       "      <td>0.525167</td>\n",
+       "      <td>0.047354</td>\n",
+       "      <td>1.915527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.330858</td>\n",
+       "      <td>0.412879</td>\n",
+       "      <td>0.441564</td>\n",
+       "      <td>-0.185752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.689047</td>\n",
+       "      <td>0.559068</td>\n",
+       "      <td>0.230350</td>\n",
+       "      <td>0.564268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.290486</td>\n",
+       "      <td>0.695479</td>\n",
+       "      <td>0.852587</td>\n",
+       "      <td>-0.475016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.424280</td>\n",
+       "      <td>0.534344</td>\n",
+       "      <td>0.245216</td>\n",
+       "      <td>-0.448844</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C         D\n",
+       "0  0.615875  0.525167  0.047354  1.915527\n",
+       "1  0.330858  0.412879  0.441564 -0.185752\n",
+       "2  0.689047  0.559068  0.230350  0.564268\n",
+       "3  0.290486  0.695479  0.852587 -0.475016\n",
+       "4  0.424280  0.534344  0.245216 -0.448844"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.eval('D = (A - B) / C', inplace = True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Local variables in DataFrame.eval()\n",
+    "\n",
+    "• The DataFrame.eval() method supports an additional syntax that lets it work with local Python variables.\n",
+    "\n",
+    "• Consider the following"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_mean = df.mean(1)\n",
+    "result1 = df['A'] + column_mean\n",
+    "result2 = df.eval('A + @column_mean')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• The @ character here marks a variable name rather than a column name, and lets you efficiently evaluate expressions involving the two “namespaces”: the namespace of columns, and the namespace of Python objects.\n",
+    "\n",
+    "• Notice that this @ character is only supported by the DataFrame.eval() method, not by the pandas.eval() function, because the pandas.eval() function only has access to the one (Python) namespace."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame.query() Method\n",
+    "\n",
+    "• The DataFrame has another method based on evaluated strings, called the query() method.\n",
+    "\n",
+    "• Consider the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = df[(df.A < 0.5) & (df.B < 0.5)]\n",
+    "result2 = pd.eval('df[(df.A < 0.5) & (df.B < 0.5)]')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• As with the example used in our discussion of DataFrame.eval() , this is an expression involving columns of the DataFrame .\n",
+    "\n",
+    "• It cannot be expressed using the DataFrame.eval() syntax, however! Instead, for this type of filtering operation, you can use the query() method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result3 = df.query('A < 0.5 & B < 0.5')\n",
+    "np.allclose(result1, result3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• In addition to being a more efficient computation, compared to the masking expression this is much easier to read and understand.\n",
+    "\n",
+    "• Note that the query() method also accepts the @ flag to mark local variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmean = df['C'].mean()\n",
+    "result1 = df[(df.A < cmean) & (df.B < cmean)]\n",
+    "result2 = df.query('A < @cmean & B < @cmean')\n",
+    "np.allclose(result1, result2)"
+   ]
   }
  ],
  "metadata": {
