--- a/python/11_matplotlib/python_for_datascience_handbook/5. Customising Plot Legends.ipynb
+++ b/python/11_matplotlib/python_for_datascience_handbook/5. Customising Plot Legends.ipynb
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Multiple Legends\n",
+    "### Multiple Legends\n",
     "\n",
     "• Sometimes when designing a plot you’d like to add multiple legends to the same axes.\n",
     "\n",
@@ -499,13 +499,6 @@
     "leg = Legend(ax, lines[2:], ['Line C', 'Line D'], loc = 'lower right', frameon = False)\n",
     "ax.add_artist(leg);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -524,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
