8. Multiple Subplots.ipynb - Created

--- a/python/11_matplotlib/python_for_datascience_handbook/7. Example - Handwritten Digits.ipynb
+++ b/python/11_matplotlib/python_for_datascience_handbook/7. Example - Handwritten Digits.ipynb
@@ -88,11 +88,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "• The projection also gives us some interesting insights on the relationships within the dataset\n",
+    "\n",
+    "• For example, the ranges of 5 and 3 nearly overlap in this projection, indicating that some handwritten fives and threes are difficult to distinguish, and therefore more likely to be confused by an automated classification algorithm.\n",
+    "\n",
+    "• Other values, like 0 and 1, are more distantly separated, and therefore much less likely to be confused.\n",
+    "\n",
+    "• This observation agrees with our intuition, because 5 and 3 look much more similar than do 0 and 1."
+   ]
   }
  ],
  "metadata": {
