12. Three-Dimensional Plotting in Matplotlib.ipynb - Created

--- a/python/11_matplotlib/python_for_datascience_handbook/11. Customizing Matplotlib - Configurations and Stylesheets.ipynb
+++ b/python/11_matplotlib/python_for_datascience_handbook/11. Customizing Matplotlib - Configurations and Stylesheets.ipynb
@@ -580,6 +580,13 @@
     "import seaborn\n",
     "hist_and_lines()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• With all of these built-in options for various plot styles, Matplotlib becomes much more useful for both interactive visualization and creation of figures for publication."
+   ]
   }
  ],
  "metadata": {
