Understanding the rcParams, Colors and Plot Styles.ipynb - Created

--- a/python/11_matplotlib/machinelearningplus/5. How to Modify the Axis Ticks Positions and Labels.ipynb
+++ b/python/11_matplotlib/machinelearningplus/5. How to Modify the Axis Ticks Positions and Labels.ipynb
@@ -64,14 +64,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "In above code, plt.tick_params() is used to determine which all axis of the plot (‘top’ / ‘bottom’ / ‘left’ / ‘right’) you want to draw the ticks and which direction (‘in’ / ‘out’) the tick should point to.\n",
+    "• In above code, plt.tick_params() is used to determine which all axis of the plot (‘top’ / ‘bottom’ / ‘left’ / ‘right’) you want to draw the ticks and which direction (‘in’ / ‘out’) the tick should point to.\n",
     "\n",
-    "the matplotlib.ticker module provides the FuncFormatter to determine how the final tick label should be shown."
+    "• The matplotlib.ticker module provides the FuncFormatter to determine how the final tick label should be shown."
    ]
   }
  ],
