How to plot a basic histogram in python?.ipynb - Completed

--- a/python/11_matplotlib/machinelearningplus/Matplotlib Tutorial – A Complete Guide to Python Plot with Examples/12. How to Plot with two Y-Axis.ipynb
+++ b/python/11_matplotlib/machinelearningplus/Matplotlib Tutorial – A Complete Guide to Python Plot with Examples/12. How to Plot with two Y-Axis.ipynb
@@ -21,13 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "574"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x)"
    ]
   },
   {
