3. Histogram grouped by categories in same plot.ipynb - Completed

--- a/python/11_matplotlib/machinelearningplus/matplotlib histogram/2. How to plot a basic histogram in python?.ipynb
+++ b/python/11_matplotlib/machinelearningplus/matplotlib histogram/2. How to plot a basic histogram in python?.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "### 2. How to plot a basic histogram in python?\n",
     "\n",
-    "The pyplot.hist() in matplotlib lets you draw the histogram.\n",
+    "• The pyplot.hist() in matplotlib lets you draw the histogram.\n",
     "\n",
-    "It required the array as the required input and you can specify the number of bins needed."
+    "• It required the array as the required input and you can specify the number of bins needed."
    ]
   },
   {
