6. Histogram and Density Curve in Facets.ipynb - Completed

--- a/python/11_matplotlib/machinelearningplus/matplotlib histogram/5. Seaborn Histogram and Density Curve on the same plot.ipynb
+++ b/python/11_matplotlib/machinelearningplus/matplotlib histogram/5. Seaborn Histogram and Density Curve on the same plot.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "### 5. Seaborn Histogram and Density Curve on the same plot\n",
     "\n",
-    "If you wish to have both the histogram and densities in the same plot, the seaborn package (imported as sns) allows you to do that via the distplot().\n",
+    "• If you wish to have both the histogram and densities in the same plot, the seaborn package (imported as sns) allows you to do that via the distplot().\n",
     "\n",
-    "Since seaborn is built on top of matplotlib, you can use the sns and plt one after the other."
+    "• Since seaborn is built on top of matplotlib, you can use the sns and plt one after the other."
    ]
   },
   {
