--- a/python/11_matplotlib/machinelearningplus/top_50_matplotlib_visualizations/2. Correlation.ipynb
+++ b/python/11_matplotlib/machinelearningplus/top_50_matplotlib_visualizations/2. Correlation.ipynb
@@ -510,21 +510,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4. Jittering with stripplot\n",
+    "\n",
+    "• Often multiple datapoints have exactly the same X and Y values.\n",
+    "\n",
+    "• As a result, multiple points get plotted over each other and hide.\n",
+    "\n",
+    "• To avoid this, jitter the points slightly so you can visually see them.\n",
+    "\n",
+    "• This is convenient to do using seaborn’s stripplot()."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "4. Jittering with stripplot\n",
-    "\n",
-    "Often multiple datapoints have exactly the same X and Y values.\n",
-    "\n",
-    "As a result, multiple points get plotted over each other and hide.\n",
-    "\n",
-    "To avoid this, jitter the points slightly so you can visually see them.\n",
-    "\n",
-    "This is convenient to do using seaborn’s stripplot()."
-   ]
+   "source": []
   }
  ],
  "metadata": {
