4. In Depth - Naive Bayes Classification.ipynb - Created

--- a/python/12_scikit_learn/3. Feature Engineering.ipynb
+++ b/python/12_scikit_learn/3. Feature Engineering.ipynb
@@ -736,11 +736,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "• All the steps of the model are applied automatically.\n",
+    "\n",
+    "• Notice that for the simplicity of this demonstration, we've applied the model to the data it was trained on; this is why it was able to perfectly predict the result (refer back to Hyperparameters and Model Validation for further discussion of this).\n",
+    "\n",
+    "• For some examples of Scikit-Learn pipelines in action, see the following section on naive Bayes classification, as well as In Depth: Linear Regression, and In-Depth: Support Vector Machines."
+   ]
   }
  ],
  "metadata": {
